<resources>
    <string name="app_name">Wardrobe</string>
    <string name="current_dress">Current dress</string>
    <string name="to_home">Домой</string>
    <string name="new_category">Добавить категорию</string>
    <string name="list_of_categories">Имеющиеся категории</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="add_dress">Добавление одежды</string>
    <string name="to_sidebar">Боковое меню</string>
    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="take_photo">Take photo</string>
    <string name="dress_name">Название</string>
    <string name="dressCategory">Категория</string>
    <string name="input_dress_name">Введите название одежды</string>
    <string name="dress_photo_action_yes">Камера</string>
    <string name="dress_photo_action_no">Галерея</string>
    <string name="dress_photo_action_ignore">Назад</string>
    <string name="dress_photo_dialog_canceled">Операция отменена пользователем</string>
    <string name="dress_photo_alert_title">Выбор фото</string>
    <string name="dress_photo_alert_message">Выберите источник фотографии одежды</string>
    <string name="menu">Меню</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="dress_item_settings">Боковое меню элемента списка</string>
    <string name="move_up">Вверх</string>
    <string name="move_down">Вниз</string>
    <string name="dress_description">Описание</string>
    <string name="exit_yes">Да</string>
    <string name="exit_no">Нет</string>
    <string name="exit_ignore">Назад</string>
    <string name="exit_alert_title">Назад</string>
    <string name="exit_message_v_1">Сохранить изменения?</string>
    <string name="exit_message_v_2">Вы действительно хотите выйти? Все изменения будут утеряны.</string>
    <string name="helper_text">Обязательно*</string>

</resources>